Fix search field appearance on ios

--- a/src/sass/1-core/_01-reset.scss
+++ b/src/sass/1-core/_01-reset.scss
@@ -38,7 +38,7 @@ img {
 /* fix input no style on Safari */
 
 input[type='search'] {
-  appearance: textfield;
+  appearance: none;
 }
 
 button,
